# parallel_programming_notes

GPU-Programming-with-CPP-and-CUDA-main/.devcontainer/: DockerfileUbuntu
GPU-Programming-with-CPP-and-CUDA-main/ch10/1_cuBLAS/: CMakeLists.txt
GPU-Programming-with-CPP-and-CUDA-main/ch10/2_thrust/: CMakeLists.txt
GPU-Programming-with-CPP-and-CUDA-main/ch3/: hello_world.cu
GPU-Programming-with-CPP-and-CUDA-main/ch7/: CMakeLists.txt  readme.md
GPU-Programming-with-CPP-and-CUDA-main/ch9/: readme.md
cuda/: Nsight Compute.ncu-rep  README.md  a.csv  a.cu  b.cu  matrix_mul.cu  project_005 Vector Addition  readingmetrics  sec4_003_reading_max_warps.cu  section3_001.cu  section3_005 - Copy.cu  section3_005.cu  section4_001_runtime_apis.cu  vectoradd
cuda/GPU-Programming-with-CPP-and-CUDA-main/: .gitignore  README.md
cuda/GPU-Programming-with-CPP-and-CUDA-main/ch10/3_gtest/: CMakeLists.txt
cuda/GPU-Programming-with-CPP-and-CUDA-main/ch10/3_gtest/src/: main.cu
cuda/Section006/: nsight.sh  one_D_for_addingMatrices.cu  twoD_01.cu
cuda/Section007/: a  b  nodivergence  nsight.sh  vadd.cu  vadd2.cu  warp_divergence.cu  warp_no_divergence.cu  withdivergence
cuda/Section008/: 01_vector_reduction.cu  02_vector_reduction_with_while.cu  03_reduction_with_more_work_per_thread.cu  04_reduction_and_shared_memory.cu  05_reduction_and_shared_memory_and_unrolling.cu  06_shuffle.cu  reduction_with_shared.cu  sass_output.txt  test2  vector_reducion_results.xlsx  ~$vector_reducion_results.xlsx
cuda/Section010/: 01_naive.cu  02  02_step1.cu  03  03_step.cu  naive
cuda/Section011/: a.csv  a.txt  all_metrics_log.txt  all_metrics_report.csv.ncu-rep  cublas.cu  cublass  naive  naive.cu  tensor  tensor.cu  tensor2  tensor2.cu
cuda/section004/: 02_vecadd_enhanced.cu  q.csv  shared.txt  w.csv
cuda/section005/: get_nsight.py  output.csv  run_nsight.sh  test_01.cu  (+2 more)
mpi/: README.md
openmp/: README.md
(+90 files in other folders)
